# yldfi-rs

./: .gitignore  .release-please-manifest.json  CONTRIBUTING.md  Cargo.toml  LLM_REVIEW_2026-01-26_v2.md  deny.toml  release-please-config.json
crates/alcmy/: CHANGELOG.md  Cargo.toml  README.md
crates/alcmy/examples/: test_api.rs
crates/alcmy/src/: client.rs  error.rs  lib.rs
crates/alcmy/src/accounts/: api.rs  mod.rs  types.rs
crates/alcmy/src/beacon/: api.rs  mod.rs  types.rs
crates/alcmy/src/bundler/: api.rs  mod.rs  types.rs
crates/alcmy/src/debug/: api.rs  mod.rs  types.rs
crates/alcmy/src/gasmanager/: api.rs  mod.rs  types.rs
crates/alcmy/src/nft/: api.rs  mod.rs  types.rs
crates/alcmy/src/notify/: api.rs  mod.rs  types.rs
crates/alcmy/src/portfolio/: api.rs  mod.rs  types.rs
crates/alcmy/src/prices/: api.rs  mod.rs  types.rs
crates/alcmy/src/simulation/: api.rs  mod.rs  types.rs
crates/alcmy/src/solana/: api.rs  mod.rs  types.rs
crates/alcmy/src/token/: api.rs  mod.rs  types.rs
crates/alcmy/src/trace/: api.rs  mod.rs  types.rs
crates/alcmy/src/transfers/: api.rs  mod.rs  types.rs
crates/alcmy/src/wallet/: api.rs  mod.rs  types.rs
crates/cgko/: CHANGELOG.md  Cargo.toml  README.md
crates/cgko/examples/: test_endpoints.rs
crates/cgko/src/: client.rs  error.rs  lib.rs
crates/cgko/src/categories/: api.rs
crates/cgko/src/coins/: api.rs  mod.rs  types.rs
crates/cgko/src/derivatives/: api.rs  types.rs
crates/cgko/src/exchanges/: api.rs
crates/cgko/src/global/: api.rs  mod.rs  types.rs
crates/cgko/src/nfts/: api.rs  types.rs
crates/cgko/src/onchain/: api.rs  types.rs
crates/cgko/src/simple/: api.rs  mod.rs  types.rs
crates/cgko/src/treasury/: api.rs  mod.rs  types.rs
crates/cowp/: CHANGELOG.md  Cargo.toml  README.md
crates/cowp/examples/: get_quote.rs
crates/cowp/src/: client.rs  error.rs  lib.rs  types.rs
crates/cowp/tests/: integration.rs
crates/curve-api/: Cargo.toml
crates/curve-api/examples/: test_api.rs
crates/curve-api/src/: client.rs  error.rs  lib.rs
crates/curve-api/src/crvusd/: types.rs
crates/curve-api/src/lending/: api.rs  types.rs
crates/curve-api/src/pools/: api.rs  types.rs
crates/curve-api/src/prices/: mod.rs
crates/curve-api/src/tokens/: api.rs  mod.rs
crates/curve-api/tests/: live_api.rs
crates/dllma/: CHANGELOG.md  Cargo.toml  README.md
crates/dllma/examples/: test_free_endpoints.rs
crates/dllma/src/: client.rs  error.rs  lib.rs
crates/dnapi/: CHANGELOG.md  Cargo.toml  README.md
crates/dnapi/examples/: test_api.rs
crates/dnapi/src/: client.rs  error.rs  lib.rs
crates/dsim/: Cargo.toml  README.md
crates/dsim/examples/: test_api.rs
crates/dsim/src/: lib.rs  tests.rs
crates/dune/: Cargo.toml  README.md
crates/dune/examples/: test_api.rs
crates/enso/: Cargo.toml  README.md
crates/enso/src/: error.rs  lib.rs  types.rs
crates/ethcli/: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  ETHCLI_PLAN.md  LLMREF.md  README.md
crates/ethcli-mcp/: CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  test_mcp.py
crates/ethcli-mcp/src/: executor.rs  main.rs  tools.rs  types.rs
crates/ethcli-mcp/tests/: integration.rs
crates/ethcli/src/: cache.rs  checkpoint.rs  error.rs  fetcher.rs  lib.rs  main.rs  proxy.rs
crates/ethcli/tests/: aggregator_mocked.rs  chainlink_live.rs  cli_integration.rs
crates/gplus/: CHANGELOG.md  Cargo.toml  README.md
crates/gplus/src/: client.rs  error.rs  lib.rs  types.rs
crates/gplus/tests/: integration.rs
crates/lifi/: Cargo.toml  README.md
crates/lifi/src/: client.rs  lib.rs
crates/llama/: Cargo.toml  README.md  openapi.json
crates/llama/examples/: test_free_endpoints.rs
crates/llama/src/: client.rs  lib.rs
crates/mrls/: CHANGELOG.md  Cargo.toml  README.md
crates/mrls/examples/: test_api.rs
crates/mrls/src/: client.rs  error.rs  lib.rs
crates/mrls/tests/: live_api.rs
crates/oneinch/: Cargo.toml  README.md
crates/oneinch/src/: client.rs  lib.rs
crates/openoc/: CHANGELOG.md  Cargo.toml  README.md
crates/openoc/examples/: get_quote.rs
crates/openoc/src/: client.rs  error.rs  lib.rs  types.rs
crates/pythc/: CHANGELOG.md  Cargo.toml  README.md
crates/pythc/src/: client.rs  error.rs  lib.rs  types.rs
crates/pythc/tests/: live_api.rs  mock_api.rs
crates/sldt/: CHANGELOG.md  Cargo.toml  README.md
crates/sldt/src/: client.rs  error.rs  lib.rs  types.rs
crates/sldt/tests/: integration.rs
crates/tndrly/: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  openapi.json
crates/tndrly/.githooks/: install.sh  pre-commit
crates/tndrly/examples/: debug_alerts.rs  debug_contracts.rs  debug_vnets.rs  integration_test.rs  test_admin_rpc.rs  test_all_apis.rs  test_all_endpoints.rs  test_connection.rs  test_contracts_api.rs  test_more_endpoints.rs  test_networks.rs  test_vnet_transactions.rs  test_write_operations.rs
crates/tndrly/src/: client.rs  error.rs  lib.rs  utils.rs
crates/tndrly/tests/: admin_rpc_integration.rs  integration_test.rs  test_all_apis.rs  test_connection.rs  test_contracts_api.rs  test_more_endpoints.rs  test_networks.rs
crates/unswp/: CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md
crates/unswp/src/: client.rs  error.rs  lens.rs  lib.rs  subgraph.rs  types.rs
crates/unswp/tests/: integration.rs
crates/vlra/: CHANGELOG.md  Cargo.toml  README.md
crates/vlra/examples/: get_price.rs
crates/vlra/src/: error.rs  lib.rs  types.rs
crates/ykong/: CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md
crates/ykong/src/: client.rs  error.rs  lib.rs  prices.rs  reports.rs  strategies.rs  tvls.rs  types.rs  vaults.rs
crates/ykong/tests/: integration.rs
crates/yldfi-common/: CHANGELOG.md  Cargo.toml  README.md
crates/yldfi-common/src/: api.rs  chains.rs  eth.rs  http.rs  lib.rs  rate_limit.rs  retry.rs  units.rs
crates/zerox/: Cargo.toml  README.md
crates/zerox/src/: client.rs  lib.rs  types.rs
crates/zrxswap/: CHANGELOG.md  Cargo.toml  README.md
crates/zrxswap/examples/: get_price.rs
crates/zrxswap/src/: client.rs  error.rs  lib.rs  types.rs
(+388 files in other folders)
