[workspace]
resolver = "2"
members = [
    "crates/ethcli",
    "crates/tndrly",
    "crates/crv",
    "crates/mrls",
]

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/yldfi/yldfi-rs"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
