[workspace]
resolver = "2"
members = [
    "crates/yldfi-common",
    "crates/ethcli",
    "crates/tndrly",
    "crates/crv",
    "crates/mrls",
    "crates/dllma",
    "crates/cgko",
    "crates/dnsim",
    "crates/dnapi",
    "crates/alcmy",
    # DEX aggregator crates
    "crates/openoc",
    "crates/cowp",
    "crates/kybr",
    "crates/zrxswap",
    "crates/oinch",
    "crates/vlra",
    "crates/ensof",
    "crates/lfi",
    "crates/pythc",
    "crates/unswp",
]

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/yldfi/yldfi-rs"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Security
secrecy = "0.10"

# Random number generation
fastrand = "2"

# URL parsing
url = "2"

# Workspace-wide release profile settings
[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = "z"
