[workspace]
resolver = "2"
members = [
    "crates/yldfi-common",
    "crates/ethcli",
    "crates/tndrly",
    "crates/crv",
    "crates/mrls",
    "crates/dllma",
    "crates/cgko",
    "crates/dnsim",
    "crates/dnapi",
    "crates/alcmy",
    # DEX aggregator crates
    "crates/openoc",
    "crates/cowp",
    "crates/kybr",
    "crates/zrxswap",
    "crates/oinch",
    "crates/vlra",
    "crates/ensof",
    "crates/lfi",
    "crates/pythc",
    "crates/unswp",
    "crates/ykong",
    "crates/gplus",
    "crates/sldt",
]

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/yldfi/yldfi-rs"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Security
secrecy = "0.10"

# Random number generation
fastrand = "2"

# URL parsing
url = "2"

# Workspace-wide release profile settings
#
# Design Rationale:
# - lto = true: Link-time optimization for smaller binaries and better inlining
# - codegen-units = 1: Single codegen unit enables maximum optimization (slower compile)
# - panic = "abort": Smaller binaries, no unwinding overhead (CLI tool, not a library)
# - strip = true: Remove symbols for smaller binaries
# - opt-level = "z": Optimize for binary size over speed
#
# Why opt-level = "z" (size) instead of "3" (speed)?
# 1. ethcli is a CLI tool - startup time matters more than throughput
# 2. Most operations are I/O-bound (network requests), not CPU-bound
# 3. Smaller binaries = faster downloads and less disk usage
# 4. The performance difference is negligible for our use case
#
# To build with speed optimization instead: cargo build --release -Z build-std
# Or override locally with CARGO_PROFILE_RELEASE_OPT_LEVEL=3
[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = "z"
