[package]
name = "alcmy"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Unofficial Rust client for the Alchemy API"

[dependencies]
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
secrecy = { workspace = true }
yldfi-common = { path = "../yldfi-common" }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
