[package]
name = "alcmy"
version = "0.1.0"
edition = "2021"
description = "Unofficial Rust client for the Alchemy API"
license = "MIT"
repository = "https://github.com/yldfi/yldfi-rs/tree/main/crates/alcmy"
keywords = ["alchemy", "ethereum", "web3", "nft", "api"]
categories = ["api-bindings", "web-programming"]
readme = "README.md"

[dependencies]
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
secrecy = { workspace = true }
yldfi-common = { path = "../yldfi-common" }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
