[package]
name = "cgko"
version = "0.1.1"
edition = "2021"
description = "Unofficial Rust client for the CoinGecko API (cgko)"
license = "MIT"
repository = "https://github.com/yldfi/yldfi-rs/tree/main/crates/cgko"
keywords = ["crypto", "coingecko", "api", "prices", "defi"]
categories = ["api-bindings", "cryptography::cryptocurrencies"]
readme = "README.md"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
secrecy = { workspace = true }
url = "2"
yldfi-common = { version = "0.1", path = "../yldfi-common" }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
