[package]
name = "curve-api"
version = "0.1.0"
edition = "2021"
description = "Rust client for the Curve Finance API - pools, volumes, gauges, and lending"
license = "MIT"
repository = "https://github.com/yldfi/yldfi-rs/tree/main/crates/curve-api"
keywords = ["curve", "defi", "ethereum", "blockchain", "api"]
categories = ["api-bindings", "web-programming"]
readme = "README.md"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[dev-dependencies]
tokio-test = "0.4"
