[package]
name = "dnapi"
version = "0.1.2"
edition = "2021"
description = "Unofficial Rust client for the Dune Analytics API (dnapi)"
license = "MIT"
repository = "https://github.com/yldfi/yldfi-rs/tree/main/crates/dnapi"
keywords = ["dune", "analytics", "blockchain", "api", "client"]
categories = ["api-bindings", "web-programming::http-client"]
readme = "README.md"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
secrecy = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["time"] }
yldfi-common = { version = "0.1", path = "../yldfi-common" }

[dev-dependencies]
tokio = { version = "1", features = ["full", "macros"] }
