[package]
name = "dune"
version = "0.1.0"
edition = "2021"
description = "Unofficial Rust client for the Dune Analytics API"
license = "MIT"
repository = "https://github.com/yldfi/yldfi-rs"
keywords = ["dune", "analytics", "blockchain", "api", "client"]
categories = ["api-bindings", "web-programming::http-client"]

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
secrecy = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["time"] }
yldfi-common = { path = "../yldfi-common" }

[dev-dependencies]
tokio = { version = "1", features = ["full", "macros"] }
