[package]
name = "ethcli"
version = "0.21.2"
edition = "2021"
description = "Comprehensive Ethereum CLI for logs, transactions, accounts, and contracts"
license = "MIT"
repository = "https://github.com/yldfi/yldfi-rs/tree/main/crates/ethcli"
keywords = ["ethereum", "cli", "etherscan", "blockchain", "web3"]
categories = ["command-line-utilities", "web-programming"]
readme = "README.md"

[[bin]]
name = "ethcli"
path = "src/main.rs"

# Legacy alias for backward compatibility
[[bin]]
name = "eth-log-fetch"
path = "src/bin/eth-log-fetch.rs"

[lib]
name = "ethcli"
path = "src/lib.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Ethereum
alloy = { version = "1.0", features = [
    "providers",
    "rpc-types",
    "sol-types",
    "json-abi",
    "transports",
    "transport-http",
    "dyn-abi",
] }

# Etherscan API
foundry-block-explorers = "0.22"
alloy-chains = "0.2"

# HTTP client
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
    "socks",
    "json",
] }

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Serialization
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Output formats
csv = "1.3"
rusqlite = { version = "0.32", features = ["bundled"] }

# Progress & logging
indicatif = "0.17"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Utilities
futures = "0.3"
parking_lot = "0.12"
rand = "0.8"
hex = "0.4"
dirs = "5"
regex = "1.11"
num-traits = "0.2"

# API clients
alcmy = { path = "../alcmy" }
gecko = { path = "../gecko" }
llama = { path = "../llama" }
mrls = { path = "../mrls" }
dsim = { path = "../dsim" }
dune = { path = "../dune" }
crv = { path = "../crv" }
tndrly = { path = "../tndrly" }
yldfi-common = { version = "0.1", path = "../yldfi-common" }

# DEX aggregator clients
openoc = { path = "../openoc" }
cowswap = { path = "../cowswap" }
kyber = { path = "../kyber" }
zerox = { path = "../zerox" }
oneinch = { path = "../oneinch" }
lifi = { path = "../lifi" }
velora = { path = "../velora" }
enso = { path = "../enso" }

# Chainlink Data Streams
chainlink-data-streams-sdk = { version = "1.2", features = ["full"] }
chainlink-data-streams-report = "1.2"

# Cryptocurrency exchanges
ccxt-rust = { version = "0.1", features = ["rest", "websocket"] }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
assert_cmd = "2"
predicates = "3"
