[package]
name = "gplus"
version = "0.1.0"
edition = "2021"
description = "Unofficial Rust client for the GoPlus Security API"
license = "MIT"
repository = "https://github.com/yldfi/yldfi-rs/tree/main/crates/gplus"
keywords = ["crypto", "goplus", "security", "honeypot", "defi"]
categories = ["api-bindings", "cryptography::cryptocurrencies"]
readme = "README.md"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
url = "2"
sha1 = "0.10"
hex = "0.4"
secrecy = { workspace = true }
tokio = { version = "1", features = ["sync"] }
yldfi-common = { version = "0.1", path = "../yldfi-common" }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
wiremock = "0.6"
