[package]
name = "mrls"
version = "0.1.2"
edition = "2021"
description = "Unofficial Rust client for the Moralis Web3 API - tokens, NFTs, wallets, DeFi, and market data"
license = "MIT"
repository = "https://github.com/yldfi/yldfi-rs/tree/main/crates/mrls"
keywords = ["moralis", "web3", "ethereum", "nft", "defi"]
categories = ["api-bindings", "web-programming"]
readme = "README.md"

[features]
default = []
# Enable tracing/logging support
tracing = ["dep:tracing"]

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
secrecy = { workspace = true }
yldfi-common = { version = "0.1", path = "../yldfi-common" }

# Optional: tracing support
tracing = { version = "0.1", optional = true }

[dev-dependencies]
tokio-test = "0.4"
