[package]
name = "tndrly"
version = "0.3.2"
edition = "2021"
description = "Unofficial Rust client for the Tenderly API - simulations, virtual testnets, alerts, and more"
license = "MIT"
repository = "https://github.com/yldfi/tndrly"
keywords = ["tenderly", "ethereum", "simulation", "blockchain", "web3"]
categories = ["api-bindings", "web-programming"]
readme = "README.md"

[lib]
name = "tndrly"
path = "src/lib.rs"

[dependencies]
# Async runtime (only features needed for HTTP client)
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

# HTTP client
reqwest = { version = "0.13", default-features = false, features = [
    "rustls",
    "json",
    "query",
] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"

# Utilities
url = "2"
secrecy = "0.10"
percent-encoding = "2"

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.6"
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = "z"
