[package]
name = "yldfi-common"
version = "0.1.3"
edition = "2021"
description = "Shared utilities for yldfi-rs API clients"
license = "MIT"
repository = "https://github.com/yldfi/yldfi-rs"
keywords = ["yldfi", "web3", "utilities"]
categories = ["api-bindings", "web-programming"]
readme = "README.md"

[dependencies]
tokio = { version = "1", features = ["time", "sync"] }
fastrand = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
serde_json = { workspace = true }
url = { workspace = true }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
